# lunar_rover_kinematics_SVA

./: .gitignore  README.md  cartesian2SpatialVelocity.m  kinematicMR.m  roverSim.m
kinematics_dev/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
kinematics_dev/include/: classTest.h  kinematics.h
kinematics_dev/src/: classTest.cpp  kinematics.cpp  main.cpp
kinematics_dev/test/: kinematics_tests.cpp
kinematics_dev/test/include_tests/: HomogTest.h  JacobianTest.h  MotionTest.h  OmegaTest.cpp  OmegaTest.h  SkewTest.h  TransformTest.h
matlab_development_code/: comparisonSimplified.m  computeOmega.m  coordinateFrame.m  drawAxes.m  drawVelocity.m  driveArcActuation.m  homogTransform.m  jacobians.m  kinematicMR.m  modelMR.m  plotWheel.m  simMR.m  simplified.m  simulationWaypoints.m  skew.m  symbolicMR.m
prototyping/: sun_sensor.py  translation_estimation.py  translation_from_imu.py
writing/: MoonRanger_4_Wheeled_Kinematics_Model.tex  bib.bib  preamble.tex
